--- a/2_SPA/src/app/components/shared/navbar/navbar.component.html
+++ b/2_SPA/src/app/components/shared/navbar/navbar.component.html
@@ -21,9 +21,9 @@
         <a class="nav-link" [routerLink]="['about']">About</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+    <form class="form-inline my-2 my-lg-0" onSubmit="return false;">
+      <input class="form-control mr-sm-2" type="text" placeholder="Buscar Héroe" #buscarTexto  (keyup.enter)="buscarHeroe(buscarTexto.value)">
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="button" (click)="buscarHeroe(buscarTexto.value)">Search</button>
     </form>
   </div>
 </nav>
